[package]
name = "edi-format"
version = "0.2.2"
edition = "2021"
repository = "https://github.com/zahidkizmaz/edi-format"
description = "EDIFACT Formatter"
license = "MIT"

[dependencies]
clap = { version = "4.5.28", features = ["cargo"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[dev-dependencies]
assert_cmd = "2.0.16"
predicates = "3.1.3"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
