[package]
name = "edi-format"
version = "0.2.4"
edition = "2024"
repository = "https://github.com/zahidkizmaz/edi-format"
description = "EDIFACT Formatter"
license = "MIT"

[dependencies]
clap = { version = "4.5.48", features = ["cargo"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"

[dev-dependencies]
assert_cmd = "2.0.17"
predicates = "3.1.3"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
